--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -168,6 +168,26 @@ volume = {2},
 year = {1946}
 }
 
+@article{Ness-Cohn2020,
+author = {Ness-Cohn, Elan and Iwanaszko, Marta and Kath, William L and Allada, Ravi and Braun, Rosemary},
+doi = {10.1177/0748730420934672},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Ness-Cohn et al. - 2020 - TimeTrial An Interactive Application for Optimizing the Design and Analysis of Transcriptomic Time-Series Data.pdf:pdf},
+issn = {15524531},
+journal = {Journal of Biological Rhythms},
+keywords = {benchmarking,biostatistics,circadian biology,computational biology,experimental design guidelines,gene expression analysis,rhythm detection},
+mendeley-groups = {Methods Review Paper,JournalClub},
+month = {oct},
+number = {5},
+pages = {439--451},
+pmid = {32613882},
+publisher = {SAGE Publications Inc.},
+title = {{TimeTrial: An Interactive Application for Optimizing the Design and Analysis of Transcriptomic Time-Series Data in Circadian Biology Research}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/32613882},
+volume = {35},
+year = {2020}
+}
+
+
 
 
 
