--- a/journalMS/article.tex
+++ b/journalMS/article.tex
@@ -13,6 +13,7 @@
 \newcommand{\class}[1]{`\code{#1}'}
 \newcommand{\fct}[1]{\code{#1()}}
 
+\newcommand{\RBnote}[1]{\textcolor{red}{#1}}
 
 %% -- Article metainformation (author, title, ...) -----------------------------
 
@@ -33,7 +34,9 @@
 
 %% - \Abstract{} almost as usual
 \Abstract{
-The \pkg{fasano.franceschini.test} package is an  \proglang{R} implementation of the 2-D Kolmogorov-Smirnov (KS) two--sample test as defined by Fasano and Franceschini \citep{Fasano1987}. This is a variant of the 2-D two-sample KS test as originally defined by Peacock \citep{Peacock1983}, previously implemented in \proglang{R} in the \pkg(Peacock.test) package \citep{Xiao2016}. The \pkg{fasano.franceschini.test} package provides a two fold improvement over the current 2-D KS test on the Comprehensive \proglang{R} Archive Network (CRAN): \textbf{(i)} The Fasano and Franceschini test has been shown to run in $O(n^2)$ versus the Peacock implementation which runs in $O(n^3)$. \textbf{(ii)} The package implements a  bootstrapping procedure for improved significance testing.
+\RBnote{Are citations allowed in the abstract (per journal style)?}
+The \pkg{fasano.franceschini.test} package is an  \proglang{R} implementation of the 2-D Kolmogorov-Smirnov (KS) two--sample test as defined by Fasano and Franceschini \citep{Fasano1987}. This is a variant of the 2-D two-sample KS test as originally defined by Peacock \citep{Peacock1983}, previously implemented in \proglang{R} in the \pkg{Peacock.test} package \citep{Xiao2016}. The \pkg{fasano.franceschini.test} package provides two improvements over the current 2-D KS test on the Comprehensive \proglang{R} Archive Network (CRAN): (i) the Fasano and Franceschini test has been shown to run in $O(n^2)$ versus the Peacock implementation which runs in $O(n^3)$; and (ii) the package implements a  bootstrapping procedure for improved significance testing. 
+\RBnote{Summarize what the paper will cover.}
 }
 
 %% - \Keywords{} with LaTeX markup, at least one required
@@ -49,8 +52,7 @@ The \pkg{fasano.franceschini.test} package is an  \proglang{R} implementation of
 %%   (in the same first line, separated by comma).
 \Address{
   Elan Ness-Cohn\\
-  Department of Molecular Biosciences,\\
-  Biostatistics Division of The Department of Preventive Medicine,\\
+  Department of Molecular Biosciences\\
   \emph{and}\\
   NSF-Simons Center for Quantitative Biology\\
   Northwestern University\\
@@ -60,12 +62,11 @@ The \pkg{fasano.franceschini.test} package is an  \proglang{R} implementation of
 
 Rosemary Braun\\
   Department of Molecular Biosciences,\\
-  Biostatistics Division of The Department of Preventive Medicine,\\
-  NSF-Simons Center for Quantitative Biology,\\
   Department of Engineering Sciences and Applied Mathematics,\\
   Department of Physics and Astronomy,\\
+  Northwestern Institute on Complex Systems,\\
   \emph{and}\\
-  Northwestern Institute on Complex Systems\\
+  NSF-Simons Center for Quantitative Biology\\
   Northwestern University\\
   Evanston, IL 60208\\
   E-mail: \email{rbraun@northwestern.edu}\\
@@ -94,13 +95,15 @@ Rosemary Braun\\
 % Python <- Implementation
 % C <- Implementation
 
-The Kolmogorov--Smirnov (KS) is a non--parametric, univariate statistical test designed to assess whether a set of data is consistent with a given probability distribution. First derived by Kolmogorov and Smirnov in a series of papers~\citep{Kolmogorov1933,Kolmogorov1933a,Smirnov1936,Smirnov1937,Smirnov1939,Smirnov1944,Smirnov1948}, the one-sample KS test defines the distribution of the quantity $D_{KS}$ -- the maximal absolute difference between the empirical cumulative distribution function of a set of values and a reference probability distribution. Kolmogorov and Smirnov's key insight was proving the distribution of the quantity $D_{KS}$ to be distribution free -- meaning the distribution does not depend on the underlying cumulative distribution functions being tested. Thus, the test can effectively be used to compare any univariate empirical data distribution to any continuous univariate reference distribution. A similar two-sample KS test could further be used to compare any two univariate empirical data distributions against each other to determine if they are drawn from the same underlying univariate distribution.
+\RBnote{Please use nonbreaking spaces (tilde rather than space) before all cite commands}
 
-The versatility of the univariate KS test has made it a cornerstone of statistical analysis and is commonly used across the scientific disciplines(Cite uses in a broad range of field). Nonetheless, a generalization of the KS test as proposed by Kolmogorov and Smirnov does not naturally extend when working with data in more than one dimension. Fortunately, a solution to the dimensionality issue was articulated by Peacock \citep{Peacock1983} and later extended by Fasano and Franceschini \citep{Fasano1987}.
+The Kolmogorov--Smirnov (KS) is a non--parametric, univariate statistical test designed to assess whether a set of data is consistent with a given probability distribution. First derived by Kolmogorov and Smirnov in a series of papers~\citep{Kolmogorov1933,Kolmogorov1933a,Smirnov1936,Smirnov1937,Smirnov1939,Smirnov1944,Smirnov1948}, the one-sample KS test defines the distribution of the quantity $D_{KS}$, the maximal absolute difference between the empirical cumulative distribution function (CDF) of a set of values and a reference probability distribution. Kolmogorov and Smirnov's key insight was proving the distribution of $D_{KS}$ was independent of the CDFs being tested. Thus, the test can effectively be used to compare any univariate empirical data distribution to any continuous univariate reference distribution. A two-sample KS test could further be used to compare any two univariate empirical data distributions against each other to determine if they are drawn from the same underlying univariate distribution.
 
-Currently, only the Peacock implementation of the 2-D two-sample KS test is available in \proglang{R} \citep{R} with the \pkg{Peacock.test} package via the \fct{peacock2} function; and has been shown to be markedly slower than the Fasano and Franceschini algorithm\citep{Lopes2007}. A \proglang{C} implementation of the Fasano Franceschini test is available in \citep{numericalRecipes}; however, arguments have been made to the validity of the implementation of the test not being distribution-free\citep{Babu2006}. Furthermore, the \proglang{C} implementation statistical testing is based on a fit to Monte Carlo Simulation and is only valid if the indicated probability (significance level) is less than (more significant than) $\sim 0.20$, which may present potential issues in some analysis.
+The versatility of the univariate KS test has made it a cornerstone of statistical analysis and is commonly used across the scientific disciplines \RBnote{highlighting your note: (Cite uses in a broad range of field)}. Nonetheless, a generalization of the KS test as proposed by Kolmogorov and Smirnov does not naturally extend when working with data in more than one dimension. Fortunately, a solution to the dimensionality issue was articulated by Peacock~\citep{Peacock1983} and later extended by Fasano and Franceschini~\citep{Fasano1987}.
 
-Here we present the \pkg{fasano.franceschini.test} package as an \proglang{R} implementation of the 2-D two-sample KS test as defined by Fasano and Franceschini \citep{Fasano1987} The \pkg{fasano.franceschini.test} package provides a two fold improvement over the current 2-D KS test on the Comprehensive \proglang{R} Archive Network (CRAN): \textbf{(i)} The Fasano and Franceschini test has been shown to run in $O(n^2)$ versus the Peacock implementation which runs in $O(n^3)$. \textbf{(ii)} The package implements a bootstrapping procedure for improved significance testing and mitigates the concerns over the distribution-free nature of the test brought up by\citep{Babu2006}.
+Currently, only the Peacock implementation of the 2-D two-sample KS test is available in \proglang{R}~\citep{R} with the \pkg{Peacock.test} package via the \fct{peacock2} function, but this has been shown to be markedly slower than the Fasano and Franceschini algorithm\citep{Lopes2007}. A \proglang{C} implementation of the Fasano Franceschini test is available in \citep{numericalRecipes}; however, arguments have been made to the validity of the implementation of the test not being distribution-free\citep{Babu2006}. Furthermore, the \proglang{C} implementation statistical testing is based on a fit to Monte Carlo Simulation and is only valid for significance levels $\alpha \lessapprox 0.20$, which may present potential issues in some analysis.
+
+Here we present the \pkg{fasano.franceschini.test} package as an \proglang{R} implementation of the 2-D two-sample KS test as defined by Fasano and Franceschini \citep{Fasano1987} The \pkg{fasano.franceschini.test} package provides two improvements over the current 2-D KS test on the Comprehensive \proglang{R} Archive Network (CRAN): (i) the Fasano and Franceschini test has been shown to run in $O(n^2)$ versus the Peacock implementation which runs in $O(n^3)$; and (ii) the package implements a bootstrapping procedure for improved significance testing and mitigates the concerns over the distribution-free nature of the test brought up by~\citep{Babu2006}.
 
 
 % \begin{leftbar}
@@ -164,24 +167,29 @@ Here we present the \pkg{fasano.franceschini.test} package as an \proglang{R} im
 
 \subsection{1-D Kolmogorov--Smirnov Test}
 
-The Kolmogorov--Smirnov (KS) test is a non--parametric method for determining where a sample is consistent with a given probability distribution. While a comprehensive discussion pertaining the intricacies of the 1-D KS test can be found elsewhere~\citep{Stephens1992a}, we will present a brief overview as motivation for the basis and intuition of the 2-D KS test.
+\RBnote{This can be shortened substantially.  I have done so, but please look closely.  In general, avoid writing textbook material in papers.}
 
-As described previously, the 1-D KS test can be divided into two variants of the same statistical procedure:
-
-\begin{leftbar}
-\textbf{The One-Sample Test}
-\begin{itemize}
-\item Compares the data to an analytical distribution.
-\end{itemize}
-\textbf{The Two-Sample Test}
-\begin{itemize}
-\item Compares two data samples to determine if they are drawn from the same underlying probability distribution.
-\end{itemize}
-\end{leftbar}
-
-In both cases, the KS test works as follows:
-
-The Kolmogorov-Smirnov statistic ($D_{KS}$) is the defined by the maximum absolute difference between the cumulative density functions of the data and model (one--sample), or between the two data sets (two--sample). In the following example, the orange and blue curve in the left panel represents the underlying distribution (pdf) for sample1 and sample2, respectively (\textbf{Figure \ref{fig:kstest1D}}). The eCDF is then defined by data drawn from these underlying distribution, and the D--stat is the computed as the largest between difference between the eCDF (black dotted line) in the right panel.
+The Kolmogorov--Smirnov (KS) test is a non--parametric method for determining whether a sample is consistent with a given probability distribution. %While a comprehensive discussion pertaining the intricacies of the 1-D KS test can be found elsewhere~\citep{Stephens1992a}, we will present a brief overview as motivation for the basis and intuition of the 2-D KS test.
+%
+%As described previously, the 1-D KS test can be divided into two variants of the same statistical procedure:
+%
+%\begin{leftbar}
+%\textbf{The One-Sample Test}
+%\begin{itemize}
+%\item Compares the data to analytical distribution.
+%\end{itemize}
+%\textbf{The Two-Sample Test}
+%\begin{itemize}
+%\item Compares two data samples to determine if they are drawn from the same underlying probability distribution.
+%\end{itemize}
+%\end{leftbar}
+%
+%In both cases, the KS test works as follows:
+%
+In one dimension, 
+the Kolmogorov-Smirnov statistic ($D_{KS}$) is the defined by the maximum absolute difference between the cumulative density functions of the data and model (one--sample), or between the two data sets (two--sample),
+as illustrated in (\textbf{Figure~\ref{fig:kstest1D}}).
+%. In the following example, the orange and blue curve in the left panel represents the underlying distribution (pdf) for sample1 and sample2, respectively (\textbf{Figure \ref{fig:kstest1D}}). The eCDF is then defined by data drawn from these underlying distribution, and the D--stat is the computed as the largest between difference between the eCDF (black dotted line) in the right panel.
 
 \begin{figure}[t!]
 \centering
@@ -190,60 +198,65 @@ The Kolmogorov-Smirnov statistic ($D_{KS}$) is the defined by the maximum absolu
 }
 \end{figure}
 
-Kolmogorov and Smirnov work mathematically defined the distribution for $D_{KS}$ to be distribution free, and further derived a table of critical values for hypothesis testing. Kolmogorov and Smirnov work was later refined by Kendall and Stuart ~\citep{Kendall1946} to define the integrated probability distribution for large values of n  ($n \geq 80$), having the asymptotic expression:
+%Kolmogorov and Smirnov work mathematically defined the distribution for $D_{KS}$ to be distribution free, and further derived a table of critical values for hypothesis testing. Kolmogorov and Smirnov work was later refined by Kendall and Stuart ~\citep{Kendall1946} to define the integrated probability distribution for large values of n  ($n \geq 80$), having the asymptotic expression:
 
+In the large--sample limit ($n \geq 80$), it can be shown~\citep{Kendall1946} that $D_{KS}$ converges in distribution to 
 \begin{equation} \label{eq:1}
-\Phi(\lambda) = 2 \sum_{k=1}^{\infty} -1^{k-1}e^{-2k^2\lambda^2}
+\Phi(\lambda) = 2 \sum_{k=1}^{\infty} -1^{k-1}e^{-2k^2\lambda^2} \,.
 \end{equation}
-
-Given the maximum absolute difference ($D_{KS}$) and \textbf{Equation~\ref{eq:1}}, one can  compute a $p$-value for  hypothesis testing to determine if there is a significance difference between the cumulative density functions of the data and model (one-sample), or between the two data sets (two-sample).
-
-\textbf{For the 1-Sample case}, the $p$-value probability of a given D is defined by
-
+%Given the maximum absolute difference ($D_{KS}$) and \textbf{Equation~\ref{eq:1}}, one can  compute a $p$-value for  hypothesis testing to determine if there is a significance difference between the cumulative density functions of the data and model (one-sample), or between the two data sets (two-sample).
+%
+%\textbf{For the 1-Sample case}, the $p$-value probability of a given D is defined by
+In the one-sample case, the $p$-value is given by 
 \begin{equation} \label{eq:2}
-Prob(D > observed) = \Phi ( D\sqrt{N})
+\mathbb{P}(D > observed) = \Phi ( D\sqrt{n})\,;
 \end{equation}
-
-where $N$ is the number of data points sampled. A $p$-value $< 0.05$, indicates a significant difference between the samples.
-
-\textbf{In the 2-Sample case}, the $p$-value probability of a given D is defined by
+in the two-sample case, the $p$-value is given by
+%where $N$ is the number of data points sampled. A $p$-value $< 0.05$, indicates a significant difference between the samples.
+%
+%\textbf{In the 2-Sample case}, the $p$-value probability of a given D is defined by
 \begin{equation} \label{eq:3}
-Prob(D > observed) = \Phi ( D\sqrt{\frac{n_1n_2}{n_1+n_2}})
+\mathbb{P}(D > observed) = \Phi ( D\sqrt{\frac{n_1n_2}{n_1+n_2}})\,.
 \end{equation}
-
-where $n_1$ and $n_2$ is the number of data points in the first and second samples respectively. A $p$-value $< 0.05$, indicates a significant difference between the samples.
+%
+%where $n_1$ and $n_2$ is the number of data points in the first and second samples respectively. A $p$-value $< 0.05$, indicates a significant difference between the samples.
 
 \subsection{Higher Dimensional KS Test}
 
-Similar to the 1-D KS test, the obvious solution to extend the theory into higher dimensional would be to define the maximal cumulative difference between the two 2-D distributions. This however, presents an issue as the commutative distribution function is not well defined in more than one dimension. In 2-D, there are 4 ways (3 independent ways) of defining the cumulative distribution, since the direction in which we define choose to order the points in the x and y are arbitrary (\textbf{Figure \ref{fig:kstest2Dissue}}). In N dimensional space there are $2^{N}-1$ independent ways of defining the cumulative distribution function~\citep{Peacock1983}.
-
+%Similar to the 1-D KS test, the obvious solution to extend the theory into higher dimensional would be to define the maximal cumulative difference between the two 2-D distributions. This however, presents an issue as the cumulative distribution function is not well defined in more than one dimension. In 2-D, there are 4 ways (3 independent ways) of defining the cumulative distribution, since the direction in which we define choose to order the points in the x and y are arbitrary (\textbf{Figure \ref{fig:kstest2Dissue}}). In N dimensional space there are $2^{N}-1$ independent ways of defining the cumulative distribution function~\citep{Peacock1983}.
+Extending the above to two or higher dimension is complicated by the fact that CDFs are not well-defined in more than one dimension.  In 2-D, there are 4 ways (3 independent ways) of defining the cumulative distribution, since the direction in which we order the $x$ and $y$ points are arbitrary (\textbf{Figure \ref{fig:kstest2Dissue}}); more generally, in $P$-dimensional space there are $2^{P}-1$ independent ways of defining the cumulative distribution function~\citep{Peacock1983}.
 
 \begin{figure}[t!]
 \centering
 \includegraphics{CDF2Dissue}
-\caption{\label{fig:kstest2Dissue} 4 ways (3 independent ways) of defining the cumulative distribution for a given point in 2-D.
-$P(x < X, y < Y) + P(x < X, y > Y) + P(x > X, y < Y) = 1 - P(x > X, y > Y)$}
+\caption{\label{fig:kstest2Dissue} Four ways (3 independent) of defining the cumulative distribution for a given point in 2-D.
+%$P(x < X, y < Y) + P(x < X, y > Y) + P(x > X, y < Y) = 1 - P(x > X, y > Y)$
+}
 \end{figure}
 
 \subsection{Peacock Test (1983) and Fasano Franceschini Test (1987)}
-Peacock solved the higher dimensionality issue by defining the 2-D test statistic as the largest difference between the empirical and theoretical commutative distributions, after taking all possible ordering combinations into account. Peacock test thus computes the total integrated probability -- i.e. fraction of data -- in each of the four quadrants around all possible points in the data. For example, for a given $n$ points in a two-dimensional space, the cumulative distribution functions is calculated in the $4n^2$ quadrants of the plane defined by all pairs ($X_i$ ,$Y_j$), $X_i$ and $Y_j$ being coordinates of any pairs of points in the given sample. By ranging over all possible pairs of data points and quadrants, the 2-D D-stat is defined by the maximal difference of the integrated probabilities between samples.
+Peacock solved the higher dimensionality issue by defining the 2-D test statistic as the largest difference between the empirical and theoretical cumulative distributions, after taking all possible ordering combinations into account. Peacock's test thus computes the total integrated probability -- i.e.\,fraction of data -- in each of the four quadrants around all possible points in the data. For example, for a given $n$ points in a two-dimensional space, the cumulative distribution functions is calculated in the $4n^2$ quadrants of the plane defined by all pairs ($X_i$ ,$Y_j$), $X_i$ and $Y_j$ being coordinates of any pairs of points in the given sample. By ranging over all possible pairs of data points and quadrants, the 2-dimensional $D$ statistic is defined by the maximal difference of the integrated probabilities between samples.
 
-The slight variation defined by Fasano and Franceschini was to only consider quadrants centered in each point of the given samples to compute the cumulative distribution functions. e.g, rather than looking over all ($X_i$ ,$Y_j$; where $i,j={1,n}$), Fasano and Franceschini only used the detected points ($X_i$ ,$Y_i$; where $i={1,n}$). Thus for an given $n$ points in a two-dimensional space, those $n$ points define $4n$ -- rather than $4n^2$ -- quadrants.
+The variation defined by Fasano and Franceschini was to only consider quadrants centered in each point of the given samples to compute the cumulative distribution functions.  Rather than looking over all $X_i, Y_j: i,j={1,n}$, Fasano and Franceschini only used the detected points $X_i, Y_i : i={1,n}$. Thus for any given $n$ points in a two-dimensional space, those $n$ points define $4n$ -- rather than $4n^2$ -- quadrants.
 
 The 2-D two sample Fasano and Franceschini test is illustrated in the following example to compare the 2-D distributions of orange versus blue points (\textbf{Figure \ref{fig:kstest2D}}).
+
+\RBnote{Something is amiss with the way the points are counted!}
 
 \begin{figure}[t!]
 \centering
 \includegraphics{fftestOutput}
-\caption{\label{fig:kstest2D} Illustration of the Fasano Franceschini algorithmic search for the maximal difference ($D_{FF}$) between sample 2-D eCDFs. Looping through each point in the sampled data to define a unique origin (grey dotted line), the fraction of orange and blue points in each quadrants are computed (plot corners). For each origin, the quadrant which maximizes the absolute difference in the integrated probabilities is indicated. The origin which maximizes the overall absolute difference in the integrated probabilities between samples is highlighted by the orange box.
+\caption{\label{fig:kstest2D} Illustration of the Fasano Franceschini algorithmic search for the maximal difference ($D_{FF}$) between sample 2-D eCDFs. Looping through each point in the sampled data to define a unique origin (grey dotted line), the fraction of orange and blue points in each quadrants are computed (plot corners). For each origin, the quadrant which maximizes the absolute difference in the integrated probabilities is indicated. The origin which maximizes the overall absolute difference in the integrated probabilities between samples is highlighted by the orange box. \RBnote{Something is amiss with the way the points are counted!}
 }
 \end{figure}
 
-The algorithm loops through each point in the orange sample in turn to define the origin of 4 quadrants (grey dotted line). The fraction of orange and blue points in each quadrant is computed (corners of plot) and the quadrant with the maximal difference is designated with the current maximum for the specified origin. By ranging over all pairs of data points and quadrants, the 2-D $D_{FF}$ is defined by the maximal difference of the integrated probabilities between samples. In this case using the orange point as the origin, the maximal difference is $D = 0.60$.
+The algorithm loops through each point in the orange sample in turn to define the origin of 4 quadrants (grey dotted line). The fraction of orange and blue points in each quadrant is computed (corners of plot) and the quadrant with the maximal difference is designated with the current maximum for the specified origin. By iterating over all pairs of data points and quadrants, the $D_{FF}$ is defined by the maximal difference of the integrated probabilities between samples. In this case using the orange point as the origin, the maximal difference is $D_{FF} = 0.60$.
+\RBnote{How are tied values counted? You have strict inequalities in the figure\dots}
 
-This process is repeated using the blue points as the origins to compute the maximal $D_{FF}$. Finally, both maximal D-stats using the orange and blue points as origins are then averaged to compute the overall $D_{FF}$ for hypothesis testing.
+\RBnote{Since $D_{FF}$ from one sample isn't the final $D_{FF}$, you should note it appropriately (eg, $D_{FF,1}$ and $D_{FF,2}$).}
+This process is repeated using the blue points as the origins to compute the maximal $D_{FF}$. Finally, both maximal $D_{FF}$ statistics using the orange and blue points as origins are then averaged to compute the overall $D_{FF}$ for hypothesis testing.
 
-\subsection{Defining the Fasano and Franceschini Null Distribution}
+\subsection{Defining the Fasano and Franceschini null distribution}
 
 Using Monte Carlo simulation, Fasano and Franceschini created a series of critical value look up tables of values of $D_{FF}$ -- as a function of $D_{FF}$, the sample size $N$, and the coefficient of correlation $r$. Teukolsky and Press later defined an approximate fit to this data in equation \ref{eq:4} for quick computation \cite{numericalRecipes}.
 
